# Graph-visualizer

./: .gitignore  README.md  requirements.txt
API/: pyproject.toml
API/graph/models/: graph.py  workspace.py
API/graph/services/: __init__.py  plugin.py
data/csv/: 210_nodes.csv  acyclic_graph_30_nodes.csv  cyclic_graph_30_nodes.csv  cyclic_test.csv  test.csv
data/json/: 210_nodes.json  complex.json  complex_210_nodes.json  test_acyclic_tree.json  test_complex_graph.json  test_cyclic_graph.json  test_simple_graph.json
data/xml/: complex.xml  cycle.xml  test.xml  test2.xml  ultra_complex.xml
platform/: pyproject.toml
platform/graph/use_cases/: const.py  plugin_recognition.py  print_json_graph.py
plugins/datasources/csv/: pyproject.toml
plugins/datasources/csv/graph/csv/: datasource.py
plugins/datasources/json/: pyproject.toml
plugins/datasources/json/graph/json/: datasource.py
plugins/datasources/xml/: pyproject.toml
plugins/datasources/xml/graph/xml/: datasource.py
plugins/visualizers/block/: pyproject.toml
plugins/visualizers/block/graph/block/: visualizer.py
plugins/visualizers/block/templates/: block_graph_template.html
plugins/visualizers/simple/: pyproject.toml
plugins/visualizers/simple/graph/simple/: visualizer.py
plugins/visualizers/simple/templates/: simple_graph_template.html
visualizer_platform/: pyproject.toml
visualizer_platform/graph/services/: cli_service.py  workspace_service.py  worspace_service.py
visualizer_platform/graph/use_cases/: plugin_recognition.py  print_csv_graph.py  print_xml_graph.py
visualizer_platform/graph/use_cases/views/: graph_bird_view.py  graph_main_view.py  graph_tree_view.py
visualizer_platform/templates/: graph-bird-view-body.html  graph-main-view.html  graph-tree-view.html
webapp/: manage.py  pyproject.toml
webapp/graph_visualizer/: apps.py  urls.py  views.py
webapp/graph_visualizer/static/: style.css
webapp/graph_visualizer/templates/: graph-bird-view.html  graph-main-view.html  graph-tree-view.html  index.html
webapp/sites/: asgi.py  settings.py  wsgi.py
