[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graph-datasource-json"
version = "0.1"
description = "This is a plugin which loads graph data from JSON files."
dependencies = [
    "graph-api==0.1",
    "Django>=5.1"
]

[project.entry-points."graph.datasource"]
datasource_db = "graph.json.datasource:JsonTreeLoader"

[tool.setuptools]
provides = ["graph.json.datasource"]
