[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graph-visualizer-simple"
version = "0.1"
description = "This component visualizes graph data in a simple format."
dependencies = [
    "graph-api==0.1",
    "Django>=5.1",
    "Jinja2>=3.0"
]

[project.entry-points."graph.visualizer"]
visualizer = "graph.simple.visualizer:SimpleVisualizer"

[tool.setuptools.package-data]
"graph.simple" = ["templates/*.html"]

[tool.setuptools]
provides = ["graph.simple.visualizer"]

[tool.setuptools.packages.find]
where = ["."]
include = ["graph*"]